2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Spanish, Indonesian, Russian, Ukrainian and Italian
	translations. Thanks to all translators.
	* po/es.po
	* po/id.po
	* po/it.po
	* po/ru.po
	* po/uk.po
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.2.0
	* configure.ac
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	BtContext::getAnnounceTiers() now returns const reference.
	* src/BtContext.h
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h
	* test/MockBtContext.h

2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Change the number of retries for tracker request based on the
	number of available tracker in a torrent file.
	* src/TrackerWatcherCommand.cc
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added _maxTries property to RequestGroup and assign the option
	value of PREF_MAX_TRIES to it. AbstractCommand now looks up
	RequestGroup::getMaxTries() instead of
	Option::getAsInt(PREF_MAX_TRIES).
	* src/AbstractCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Applied AdaptiveURISelector-timeout patch from Pascal Rigaux at
	Mandriva. I modified the patch: make RequestGroup have the
	timeout value and AdaptiveURISelector directly modifies that
	value.
	* src/AbstractCommand.cc
	* src/AdaptiveURISelector.cc
	* src/AdaptiveURISelector.h
	* src/FtpNegotiationCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h

2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compiler warning
	* test/IteratableChecksumValidatorTest.cc

2009-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use LongestSequencePieceSelector for HTTP/FTP/BitTorrent
	integrated downloads. This PieceSelector subclass finds the
	longest continuous sequence in the available missing pieces and