@@ -1362,6 +1362,17 @@ writes the piece to the appropriate files.</td>
 </p>
 </dd>
 <dt>
+<strong>--enable-http-server</strong>[=<em>true</em>|<em>false</em>]
+</dt>
+<dd>
+<p>
+  Enable the built-in HTTP server. Currently, this is the experimental
+  feature and it just provides the current download progress. Use your
+  web browser(console-based ones, such as elinks, w3m, are recommended)
+  to connect the server and see what's what.  Default: <em>false</em>
+</p>
+</dd>
+<dt>
 <strong>--file-allocation</strong>=METHOD
 </dt>
 <dd>
@@ -1412,6 +1423,15 @@ are also allocated if they share the same piece.</td>
   Fetch URIs in the command-line sequentially and download each URI in a
   separate session, like the usual command-line download utilities.
   Default: <em>false</em>
+</p>
+</dd>
+<dt>
+<strong>--http-server-listen-port</strong>=PORT
+</dt>
+<dd>
+<p>
+  Specify a port number for the built-in HTTP Server to listen to.
+  Possible Values: <em>1024</em>-<em>65535</em> Default: <em>6800</em>
 </p>
 </dd>
 <dt>
@@ -2179,7 +2199,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-01-19 23:13:30 JST
+Last updated 2009-02-02 23:15:57 JST
 </div>
 </div>
 </body>
