@@ -1,3 +1,9 @@
+2009-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Documented --http-server-listen-port and --enable-http-server in
+	man page.
+	* doc/aria2c.1.txt
+
 2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Updated Spanish, Indonesian, Russian, Ukrainian and Italian
